Removed ReelHunt.ipynb from repository

--- a/Model.ipynb
+++ b/Model.ipynb
@@ -806,7 +806,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
@@ -815,12 +815,13 @@
           "text": [
             "[nltk_data] Downloading package stopwords to\n",
             "[nltk_data]     C:\\Users\\Taha\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]   Unzipping corpora\\stopwords.zip.\n",
+            "[nltk_data]   Package stopwords is already up-to-date!\n",
             "[nltk_data] Downloading package wordnet to\n",
             "[nltk_data]     C:\\Users\\Taha\\AppData\\Roaming\\nltk_data...\n",
+            "[nltk_data]   Package wordnet is already up-to-date!\n",
             "[nltk_data] Downloading package punkt_tab to\n",
             "[nltk_data]     C:\\Users\\Taha\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]   Unzipping tokenizers\\punkt_tab.zip.\n"
+            "[nltk_data]   Package punkt_tab is already up-to-date!\n"
           ]
         },
         {
@@ -829,7 +830,7 @@
               "True"
             ]
           },
-          "execution_count": 19,
+          "execution_count": 18,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -846,7 +847,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -861,7 +862,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -870,7 +871,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -879,7 +880,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -906,7 +907,7 @@
               "Name: tag, Length: 4809, dtype: object"
             ]
           },
-          "execution_count": 23,
+          "execution_count": 22,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -917,7 +918,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [
         {
@@ -937,7 +938,7 @@
               "Name: title, Length: 4809, dtype: object"
             ]
           },
-          "execution_count": 24,
+          "execution_count": 23,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -948,7 +949,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1067,7 +1068,7 @@
               "4  john carter action adventure science fictionba...  "
             ]
           },
-          "execution_count": 25,
+          "execution_count": 24,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1078,7 +1079,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 25,
       "metadata": {
         "id": "gL8-REjwZ1-J"
       },
@@ -1091,7 +1092,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 26,
       "metadata": {
         "id": "h25pi0HHdinC"
       },
@@ -1103,7 +1104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 27,
       "metadata": {
         "id": "bA4PZRCwd0wz"
       },
@@ -1125,7 +1126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 28,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1158,7 +1159,56 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 29,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def get_recommendations_by_keywords(keywords, cosine_sim=cosine_sim):\n",
+        "\n",
+        "  keywords = clean_text(keywords) \n",
+        "  keyword_vector = tfidf.transform([keywords])  \n",
+        "\n",
+        "  sim_scores = cosine_similarity(keyword_vector, tfidf_matrix).flatten() \n",
+        "\n",
+        "  sim_scores = list(enumerate(sim_scores))\n",
+        "  sim_scores = sorted(sim_scores, key=lambda x: x[1], reverse=True)\n",
+        "  sim_scores = sim_scores[0:10]  \n",
+        "\n",
+        "  movie_indices = [i[0] for i in sim_scores]\n",
+        "  return movies['title'].iloc[movie_indices]"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 30,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "7                   avenger age ultron\n",
+            "16                             avenger\n",
+            "126                    thor dark world\n",
+            "85      captain america winter soldier\n",
+            "169      captain america first avenger\n",
+            "17      pirate caribbean stranger tide\n",
+            "2156                       street king\n",
+            "818                   captain phillips\n",
+            "3537                          galaxina\n",
+            "3571                  20000 league sea\n",
+            "Name: title, dtype: object\n"
+          ]
+        }
+      ],
+      "source": [
+        "recommendations = get_recommendations_by_keywords(\"captain thor\")\n",
+        "print(recommendations)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 31,
       "metadata": {
         "id": "_YgJZ0v0eqAc"
       },
@@ -1171,7 +1221,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [
         {
@@ -1228,7 +1278,7 @@
               "64  xmen apocalypse science fictionmutant supernat...  "
             ]
           },
-          "execution_count": 31,
+          "execution_count": 32,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1242,7 +1292,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 33,
       "metadata": {},
       "outputs": [
         {
@@ -1299,7 +1349,7 @@
               "10  superman return adventure fantasy action scien...  "
             ]
           },
-          "execution_count": 32,
+          "execution_count": 33,
           "metadata": {},
           "output_type": "execute_result"
         }
