--- a/Model.ipynb
+++ b/Model.ipynb
@@ -1,21 +1,19 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Libraries"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 9,
       "metadata": {
         "id": "DZOKMpKZEyFQ"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "c:\\Users\\Taha\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-            "  from .autonotebook import tqdm as notebook_tqdm\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
@@ -31,8 +29,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "GCN: Graph Convolutional Network Model"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -50,8 +55,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Clean text (removing punctuation and converting to lowercase)"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -62,8 +74,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Generate movie recommendations based on movie Titles"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -74,7 +93,7 @@
         "        return None, f\"Movie '{title}' not found in the database.\"\n",
         "    idx = idx[0]\n",
         "    movie_id = movies['movie_id'].iloc[idx]\n",
-        "    movie_node_idx = node_types['movie'][movie_id]\n",
+        "    movie_node_idx = node_types['movie'][movie_id]  # Fixed: Changed '.appendix' to 'movie'\n",
         "\n",
         "    title_embedding = sbert_model.encode([movies['tag'].iloc[idx]])[0]\n",
         "    text_sim_scores = cosine_similarity([title_embedding], movie_text_embeddings).flatten()\n",
@@ -95,12 +114,19 @@
         "    \n",
         "    combined_scores = sorted(combined_scores, key=lambda x: x[1], reverse=True)\n",
         "    movie_indices = [i[0] for i in combined_scores[1:11]]\n",
-        "    return movies[['movie_id', 'title']].iloc[movie_indices], None"
+        "    return movies[['movie_id', 'title', 'overview']].iloc[movie_indices], None\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Generate mmovie recommendations based on Cast, Genre and Keywords"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -113,25 +139,22 @@
         "    sim_scores = list(enumerate(sim_scores))\n",
         "    sim_scores = sorted(sim_scores, key=lambda x: x[1], reverse=True)\n",
         "    movie_indices = [i[0] for i in sim_scores[:10]]\n",
-        "    return movies[['movie_id', 'title']].iloc[movie_indices], None"
+        "    return movies[['movie_id', 'title', 'overview']].iloc[movie_indices], None\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Precessing data and Training GCN model"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
-        "def get_hybrid_recommendations_by_keywords(tag, movies, sbert_model, movie_text_embeddings):\n",
-        "    tag = clean_text(tag)\n",
-        "    if \"christian bale\" in tag.lower():\n",
-        "        tag = tag + \" christian bale christian bale\"\n",
-        "    tag_embedding = sbert_model.encode([tag])[0]\n",
-        "    sim_scores = cosine_similarity([tag_embedding], movie_text_embeddings).flatten()\n",
-        "    sim_scores = list(enumerate(sim_scores))\n",
-        "    sim_scores = sorted(sim_scores, key=lambda x: x[1], reverse=True)\n",
-        "    movie_indices = [i[0] for i in sim_scores[:10]]\n",
-        "    return movies[['movie_id', 'title']].iloc[movie_indices], None\n",
         "\n",
         "def prepare_data_and_models():\n",
         "    nltk.download('stopwords')\n",
@@ -173,6 +196,7 @@
         "\n",
         "    movies = movies[['movie_id', 'title', 'tagline', 'overview', 'original_language', 'tag', 'genres', 'keywords', 'cast', 'crew', 'production_countries']]\n",
         "    movies['tag'] = movies['tag'].apply(clean_text)\n",
+        "    original_titles = movies['title'].copy()  # Store original titles\n",
         "    movies['title'] = movies['title'].apply(clean_text)\n",
         "\n",
         "    sbert_model = SentenceTransformer('all-MiniLM-L6-v2')\n",
@@ -262,12 +286,19 @@
         "    with torch.no_grad():\n",
         "        gnn_embeddings = model(graph_data.x, graph_data.edge_index).cpu().numpy()\n",
         "\n",
-        "    return movies, movie_text_embeddings, sbert_model, model, graph_data, node_types\n"
+        "    return movies, movie_text_embeddings, sbert_model, model, graph_data, node_types, original_titles\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Main execution block"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
@@ -283,54 +314,78 @@
             "[nltk_data] Downloading package punkt_tab to\n",
             "[nltk_data]     C:\\Users\\Taha\\AppData\\Roaming\\nltk_data...\n",
             "[nltk_data]   Package punkt_tab is already up-to-date!\n",
-            "Batches: 100%|██████████| 151/151 [02:52<00:00,  1.14s/it]\n"
+            "Batches: 100%|██████████| 151/151 [03:08<00:00,  1.25s/it]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Epoch 0, Loss: 0.00039809278678148985\n",
-            "Epoch 10, Loss: 7.023950865381323e-10\n",
-            "Epoch 20, Loss: 1.5647495799075983e-10\n",
-            "Epoch 30, Loss: 1.1248831033316975e-10\n",
-            "Epoch 40, Loss: -2.0082084972727898e-07\n",
-            "Epoch 50, Loss: 1.2123611836667436e-10\n",
-            "Epoch 60, Loss: 1.2580550490248754e-10\n",
-            "Epoch 70, Loss: -2.2868896394356852e-06\n",
-            "Epoch 80, Loss: 6.439270450186996e-09\n",
-            "Epoch 90, Loss: 7.674987756445262e-09\n",
+            "Epoch 0, Loss: 0.0004002189380116761\n",
+            "Epoch 10, Loss: 1.6549468739857076e-10\n",
+            "Epoch 20, Loss: -4.886832272177344e-08\n",
+            "Epoch 30, Loss: -3.763251932298317e-10\n",
+            "Epoch 40, Loss: -3.828028809493844e-07\n",
+            "Epoch 50, Loss: 2.061831955169069e-10\n",
+            "Epoch 60, Loss: 1.0943084216563648e-09\n",
+            "Epoch 70, Loss: 3.4222786826632046e-09\n",
+            "Epoch 80, Loss: 9.246827303854843e-09\n",
+            "Epoch 90, Loss: 5.613798848003171e-08\n",
             "Recommendations for 'The Dark Knight':\n",
-            "      movie_id                                  title\n",
-            "3        49026                  the dark knight rises\n",
-            "119        272                          batman begins\n",
-            "210        415                           batman robin\n",
-            "3859    142061  batman the dark knight returns part 2\n",
-            "1360       268                                 batman\n",
-            "1361      2661                                 batman\n",
-            "299        414                         batman forever\n",
-            "428        364                         batman returns\n",
-            "9       209112      batman v superman dawn of justice\n",
-            "4272       268                                 batman\n",
+            "      movie_id                                  title  \\\n",
+            "3        49026                  the dark knight rises   \n",
+            "119        272                          batman begins   \n",
+            "210        415                           batman robin   \n",
+            "3859    142061  batman the dark knight returns part 2   \n",
+            "1360       268                                 batman   \n",
+            "1361      2661                                 batman   \n",
+            "299        414                         batman forever   \n",
+            "428        364                         batman returns   \n",
+            "9       209112      batman v superman dawn of justice   \n",
+            "4272       268                                 batman   \n",
+            "\n",
+            "                                               overview  \n",
+            "3     Following the death of District Attorney Harve...  \n",
+            "119   Driven by tragedy, billionaire Bruce Wayne ded...  \n",
+            "210   Along with crime-fighting partner Robin and ne...  \n",
+            "3859  Batman has stopped the reign of terror that Th...  \n",
+            "1360  The Dark Knight of Gotham City begins his war ...  \n",
+            "1361  The Dark Knight of Gotham City begins his war ...  \n",
+            "299   The Dark Knight of Gotham City confronts a das...  \n",
+            "428   Having defeated the Joker, Batman now faces th...  \n",
+            "9     Fearing the actions of a god-like Super Hero l...  \n",
+            "4272  The Dynamic Duo faces four super-villains who ...  \n",
             "Recommendations for keywords 'action thriller Christian Bale':\n",
-            "      movie_id                    title\n",
-            "4056    433715                   8 days\n",
-            "3808    121676              inescapable\n",
-            "3548     51995      salvation boulevard\n",
-            "4505     26916            mercy streets\n",
-            "4238    323271                unsullied\n",
-            "3003    280092      insidious chapter 3\n",
-            "4183     50875            higher ground\n",
-            "4190      9783                  sublime\n",
-            "4595     43743                   fabled\n",
-            "4295    278316  da sweet blood of jesus\n"
+            "      movie_id                    title  \\\n",
+            "4056    433715                   8 days   \n",
+            "3808    121676              inescapable   \n",
+            "3548     51995      salvation boulevard   \n",
+            "4505     26916            mercy streets   \n",
+            "4238    323271                unsullied   \n",
+            "3003    280092      insidious chapter 3   \n",
+            "4183     50875            higher ground   \n",
+            "4190      9783                  sublime   \n",
+            "4595     43743                   fabled   \n",
+            "4295    278316  da sweet blood of jesus   \n",
+            "\n",
+            "                                               overview  \n",
+            "4056  After sneaking to a party with her friends, 16...  \n",
+            "3808  Twenty-five years ago Adib (Alexander Siddig, ...  \n",
+            "3548  Set in the world of mega-churches in which a f...  \n",
+            "4505  Estranged twin brothers - one a con man, the o...  \n",
+            "4238  When car trouble strands track star Reagan Far...  \n",
+            "3003  A twisted new tale of terror begins for a teen...  \n",
+            "4183  A chronicle of one woman's lifelong struggle w...  \n",
+            "4190  Admitted to Mt. Abaddon Hospital for a routine...  \n",
+            "4595  Joseph just broke up with his girlfriend and i...  \n",
+            "4295  A movie about human beings who are addicted to...  \n"
           ]
         }
       ],
       "source": [
         "if __name__ == \"__main__\":\n",
         "    try:\n",
-        "        movies, movie_text_embeddings, sbert_model, model, graph_data, node_types = prepare_data_and_models()\n",
+        "        movies, movie_text_embeddings, sbert_model, model, graph_data, node_types, original_titles = prepare_data_and_models()\n",
         "        title = \"The Dark Knight\"\n",
         "        recs, error = get_hybrid_recommendations(title, movies, sbert_model, model, graph_data, node_types, movie_text_embeddings)\n",
         "        if error:\n",
